# bpr

./: .gitignore  LICENSE  README.md  dataset.py  model.py  preprocess.py  pyproject.toml  requirements.txt  train.py  trainer.py
tests/: test_dataset.py  test_model.py  test_preprocess.py
