[tool.poetry]
name = "bpr"
version = "0.1.0"
description = ""
authors = ["Jeong-Junhwan <zxxzx1515@naver.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
black = "^23.1.0"
pytest = "^7.2.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
